# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md
data/: african_head.json  chest.json  firehydrant.json
inc/: Buffer.h  Camera.h  Core.h  DisplayManager.h  Engine.h  EngineMath.h  Geometry.h  InputManager.h  Material.h  Mesh.h  RenderManager.h  RenderObj.h  Renderer.h  Scene.h  Shader.h  Texture.h  stdafx.h
src/: CMakeLists.txt  Camera.cpp  DisplayManager.cpp  Engine.cpp  EngineMath.cpp  Geometry.cpp  InputManager.cpp  Mesh.cpp  RenderManager.cpp  RenderObj.cpp  Renderer.cpp  Scene.cpp  Texture.cpp  main.cpp
